k8s/feature-flags/overlays/dev/patch-image-pull-secret-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feature-flags-api
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
