k8s/feature-flags/overlays/dev/patch-image-pull-secret-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feature-flags-frontend
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
