k8s/feature-flags/overlays/dev/patch-restart-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feature-flags-api
  namespace: feature-flags
spec:
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-05-18T20:35:00Z"
