k8s/feature-flags/overlays/dev/patch-frontend-svc-loadbalancer.yaml
# Docker Desktop usually maps EXTERNAL-IP to localhost:80.
apiVersion: v1
kind: Service
metadata:
  name: feature-flags-svc
  namespace: feature-flags
spec:
  type: LoadBalancer
